--- a/HashLib/HashLib.rc
+++ b/HashLib/HashLib.rc
@@ -28,7 +28,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,0,0,1
- PRODUCTVERSION 1,0,0,1
+ PRODUCTVERSION 2,4,0,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -48,7 +48,7 @@ BEGIN
             VALUE "FileDescription", "HashLib DLL"
             VALUE "FileVersion", "1, 0, 0, 1"
             VALUE "InternalName", "HashLib"
-            VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2008. All rights reserved."
+            VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2008-2009. All rights reserved."
             VALUE "OriginalFilename", "HashLib.dll"
             VALUE "ProductName", "Shareaza"
             VALUE "ProductVersion", "2, 4, 0, 0"
