--- a/Languages/tools/SkinTranslate/SkinTranslate.vcproj
+++ b/Languages/tools/SkinTranslate/SkinTranslate.vcproj
@@ -205,6 +205,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\SkinTranslate.h"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.h"
 				>
 			</File>
