Added support for <fonts>; Added XML errors reporting.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8049 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/tools/SkinTranslate/SkinTranslate.vcproj
+++ b/Languages/tools/SkinTranslate/SkinTranslate.vcproj
@@ -115,14 +115,16 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
+				Optimization="3"
+				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
+				OmitFramePointers="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="0"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
-				WarningLevel="3"
-				DebugInformationFormat="3"
+				WarningLevel="4"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -137,10 +139,10 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="msxml2.lib"
 				LinkIncremental="1"
-				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				SetChecksum="true"
 				TargetMachine="1"
 			/>
 			<Tool
