Updated/renamed several icons.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8114 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -82,7 +82,7 @@ IDR_UPLOADSFRAME        ICON                    "Res\\Uploads.ico"
 IDI_BROWSE              ICON                    "Res\\Browse.ico"
 IDR_TRAFFICFRAME        ICON                    "Res\\Traffic.ico"
 IDR_CHATFRAME           ICON                    "Res\\Chat.ico"
-IDI_PROPERTIES          ICON                    "Res\\ColourDot.ico"
+IDI_PROPERTIES          ICON                    "Res\\Properties.ico"
 IDR_SECURITYFRAME       ICON                    "Res\\Security.ico"
 IDR_DISCOVERYFRAME      ICON                    "Res\\Discovery.ico"
 IDI_WEB_URL             ICON                    "Res\\WebURL.ico"
@@ -109,7 +109,7 @@ IDI_DISCOVERY_BLUE      ICON                    "Res\\DiscoveryBlue.ico"
 IDI_CONTACT_MSN         ICON                    "Res\\ContactMSN.ico"
 IDR_HELPFRAME           ICON                    "Res\\Help.ico"
 IDI_SEARCH_FOLDER       ICON                    "Res\\SearchFolder.ico"
-IDI_CLIPBOARD           ICON                    "Res\\Clipboard.ico"
+IDI_TOOLS_WIZARD        ICON                    "Res\\ToolsWizard.ico"
 IDI_PAINTBRUSHES        ICON                    "Res\\Paintbrushes.ICO"
 IDI_COLLECTION          ICON                    "Res\\Collection.ico"
 IDI_COLLECTION_MASK     ICON                    "Res\\CollectionMask.ico"
