--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -333,39 +333,39 @@ STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Gnutella"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
-    CONTROL         "Always connect to Gnutella2",IDC_G2_ALWAYS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,25,127,8
-    CONTROL         "Connect to Gnutella2 today",IDC_G2_TODAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,38,127,8
-    COMBOBOX        IDC_G2_CLIENTMODE,75,53,54,54,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Always connect to Gnutella1",IDC_G1_ALWAYS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,145,25,125,8
-    CONTROL         "Connect to Gnutella1 today",IDC_G1_TODAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,145,38,125,8
-    COMBOBOX        IDC_G1_CLIENTMODE,209,53,54,53,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_G2_HUBS,90,95,35,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Spin1",IDC_G2_HUBS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,126,95,11,12
-    EDITTEXT        IDC_G2_LEAFS,90,116,35,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Spin1",IDC_G2_LEAFS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,126,116,11,12
-    EDITTEXT        IDC_G2_PEERS,90,137,35,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Spin1",IDC_G2_PEERS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,126,137,11,12
-    EDITTEXT        IDC_G1_HUBS,230,95,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Always connect to Gnutella2",IDC_G2_ALWAYS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,25,120,8
+    CONTROL         "Connect to Gnutella2 today",IDC_G2_TODAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,38,120,8
+    COMBOBOX        IDC_G2_CLIENTMODE,79,53,54,54,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Always connect to Gnutella1",IDC_G1_ALWAYS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,148,25,121,8
+    CONTROL         "Connect to Gnutella1 today",IDC_G1_TODAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,148,38,121,8
+    COMBOBOX        IDC_G1_CLIENTMODE,215,53,54,53,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_G2_HUBS,98,95,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Spin1",IDC_G2_HUBS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,129,95,11,12
+    EDITTEXT        IDC_G2_LEAFS,98,116,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Spin1",IDC_G2_LEAFS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,129,116,11,12
+    EDITTEXT        IDC_G2_PEERS,98,137,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Spin1",IDC_G2_PEERS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,129,137,11,12
+    EDITTEXT        IDC_G1_HUBS,234,95,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_G1_HUBS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,95,8,12
-    EDITTEXT        IDC_G1_LEAFS,230,116,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_G1_LEAFS,234,116,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_G1_LEAFS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,116,8,12
-    EDITTEXT        IDC_G1_PEERS,230,137,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_G1_PEERS,234,137,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_G1_PEERS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,137,8,12
-    CONTROL         "Hub to Leaf",IDC_DEFLATE_HUB2LEAF,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,183,80,17
-    CONTROL         "Leaf to Hub",IDC_DEFLATE_LEAF2HUB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,100,183,80,17
-    CONTROL         "Hub to Hub",IDC_DEFLATE_HUB2HUB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,185,183,80,17
+    CONTROL         "Hub to Leaf",IDC_DEFLATE_HUB2LEAF,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,186,80,12
+    CONTROL         "Leaf to Hub",IDC_DEFLATE_LEAF2HUB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,100,186,80,12
+    CONTROL         "Hub to Hub",IDC_DEFLATE_HUB2HUB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,189,186,80,12
     GROUPBOX        "Gnutella2 Network:",IDC_STATIC,7,13,131,60,WS_GROUP
-    LTEXT           "Mode: ",IDC_STATIC,16,56,55,8,0,WS_EX_RIGHT
+    LTEXT           "Mode: ",IDC_STATIC,13,56,60,8,0,WS_EX_RIGHT
     GROUPBOX        "G&2 Connections:",IDC_STATIC,7,84,131,75,WS_GROUP
-    LTEXT           "Leaf to Hub:",IDC_STATIC,18,95,65,12,SS_CENTERIMAGE
-    LTEXT           "Hub to Leaf:",IDC_STATIC,18,116,65,12,SS_CENTERIMAGE
-    LTEXT           "Hub to Hub:",IDC_STATIC,18,137,65,12,SS_CENTERIMAGE
+    LTEXT           "Leaf to Hub:",IDC_STATIC,13,95,76,12,SS_CENTERIMAGE
+    LTEXT           "Hub to Leaf:",IDC_STATIC,13,116,76,12,SS_CENTERIMAGE
+    LTEXT           "Hub to Hub:",IDC_STATIC,13,137,76,12,SS_CENTERIMAGE
     GROUPBOX        "Gnutella1 Network:",IDC_STATIC,142,13,133,60,WS_GROUP
-    LTEXT           "Mode: ",IDC_STATIC,150,55,56,8,0,WS_EX_RIGHT
+    LTEXT           "Mode: ",IDC_STATIC,148,55,60,8,0,WS_EX_RIGHT
     GROUPBOX        "G&1 Connections:",IDC_STATIC,142,84,133,75,WS_GROUP
-    LTEXT           "Leaf to Ultrapeer:",IDC_STATIC,160,95,65,12,SS_CENTERIMAGE
-    LTEXT           "Ultrapeer to Leaf:",IDC_STATIC,160,116,65,12,SS_CENTERIMAGE
-    LTEXT           "Peer to Peer:",IDC_STATIC,160,137,65,12,SS_CENTERIMAGE
+    LTEXT           "Leaf to Ultrapeer:",IDC_STATIC,148,95,78,12,SS_CENTERIMAGE
+    LTEXT           "Ultrapeer to Leaf:",IDC_STATIC,148,116,78,12,SS_CENTERIMAGE
+    LTEXT           "Peer to Peer:",IDC_STATIC,148,137,78,12,SS_CENTERIMAGE
     GROUPBOX        "&Link Compression:",IDC_STATIC,5,172,270,33,WS_GROUP
 END
 
@@ -1681,7 +1681,7 @@ BEGIN
     EDITTEXT        IDC_TORRENT_CLIENTLINKS,15,57,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "",IDC_TORRENT_LINKS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,51,58,11,12
     LTEXT           "Client connections",IDC_STATIC,57,57,211,12,SS_CENTERIMAGE
-    CONTROL         " Clear downloaded torrents        When the share ratio reaches",IDC_TORRENT_AUTOCLEAR,
+    CONTROL         "Clear downloaded torrents     When the share ratio reaches:",IDC_TORRENT_AUTOCLEAR,
                     "Button",BS_AUTOCHECKBOX | BS_VCENTER | WS_TABSTOP,15,73,212,11,WS_EX_TRANSPARENT
     EDITTEXT        IDC_TORRENT_CLEAR_PERCENTAGE,230,73,35,12,ES_AUTOHSCROLL
     CONTROL         "",IDC_TORRENT_CLEAR_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,253,74,11,12
@@ -1993,8 +1993,15 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 275
+        VERTGUIDE, 13
+        VERTGUIDE, 89
+        VERTGUIDE, 133
+        VERTGUIDE, 148
+        VERTGUIDE, 226
+        VERTGUIDE, 269
         TOPMARGIN, 7
         BOTTOMMARGIN, 213
+        HORZGUIDE, 186
     END
 
     IDD_SETTINGS_ADVANCED, DIALOG
