--- a/plugins/RazaWebHook/RazaWebHook_9.vcproj
+++ b/plugins/RazaWebHook/RazaWebHook_9.vcproj
@@ -254,6 +254,7 @@
 				RegisterOutput="true"
 				IgnoreImportLibrary="true"
 				OutputFile="$(OutDir)\$(ProjectName)32.dll"
+				LinkIncremental="1"
 				ModuleDefinitionFile=".\RazaWebHook.def"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -345,6 +346,7 @@
 				RegisterOutput="true"
 				IgnoreImportLibrary="true"
 				OutputFile="$(OutDir)\$(ProjectName)64.dll"
+				LinkIncremental="1"
 				ModuleDefinitionFile=".\RazaWebHook.def"
 				SubSystem="2"
 				OptimizeReferences="2"
